tests/analyzer/errors/struct_init.rv
struct Foo {
    fn init(self) {}
}

struct Bar {
    fn init() {}
}

fn main() {}
